{
    "name": "TouchInput",
    "maps": [
        {
            "name": "ScreenInput",
            "id": "fd251c34-7cb6-4c7e-aa14-304549896ae2",
            "actions": [
                {
                    "name": "Touch",
                    "type": "Button",
                    "id": "14f3fd3f-f7ae-4869-88f7-337a0c3a6e9f",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "TouchPosition",
                    "type": "PassThrough",
                    "id": "7dbff5ec-73c5-4ef0-99cc-ea0d046a2c4b",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "8958275c-9886-4579-ab77-fbd91b0fb521",
                    "path": "<Touchscreen>/Press",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Touch",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "0b0c449c-4814-4530-961e-9349f5a1c362",
                    "path": "<Touchscreen>/position",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "TouchPosition",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        },
        {
            "name": "Approximation",
            "id": "61d1998d-2ec6-4994-88fa-2b39cb9ea0ef",
            "actions": [
                {
                    "name": "Touch",
                    "type": "Button",
                    "id": "55946d3c-61d8-4659-82e8-e6fec8e4f0ea",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Delta",
                    "type": "PassThrough",
                    "id": "345ce6d7-00e5-4ef8-92cd-e15004865ad2",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "EndPositionFirstTouch",
                    "type": "PassThrough",
                    "id": "892afaf5-8c0f-4e5f-bc6a-7bb41657d9d3",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "EndPositionSecondTouch",
                    "type": "PassThrough",
                    "id": "61efe887-1a60-40d0-a6c0-2d0a2fd5083b",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "9b7853e9-e7a9-45a1-b81a-1285f14ce68f",
                    "path": "<Touchscreen>/touch1/press",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Touch",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "0508e1d2-af74-426e-acec-60a219d79993",
                    "path": "<Touchscreen>/touch0/delta",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Delta",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "cdf1b665-fd65-4357-aeb5-a1fec6b51603",
                    "path": "<Touchscreen>/touch1/delta",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Delta",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "ebd3835b-f71c-48a8-9614-1e994861dbfd",
                    "path": "<Touchscreen>/touch0/position",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "EndPositionFirstTouch",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "67a93ff3-ae50-40f3-866b-497c182b1a20",
                    "path": "<Touchscreen>/touch1/position",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "EndPositionSecondTouch",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}